# Factoria

./: Cargo.toml  README.md
src/: add.rs  command.rs  create.rs  dirdat.rs  extract.rs  index.rs  main.rs  rebuild.rs  remove.rs  util.rs
src/command/: add.rs  create.rs  extract.rs  index.rs  list.rs  rebuild.rs  remove.rs
