[package]
name = "factoria"
version = "1.0.0"
edition = "2021"

[dependencies]
falcompress.git = "https://github.com/Aureole-Suite/Falcompress.git"
falcom-sjis = "0.1.0"
gospel = "0.3.1"

clap = { version = "4.1", features = ["derive"] }
memmap2 = "0.9.3"
eyre = "0.6.8"
term_size = "0.3.2"
chrono = "0.4.23"
unicode-width = "0.1.10"
number_prefix = "0.4.0"
globset = "0.4.13"
rayon = "1.7"

eyre-span = "0.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-error = "0.2.0"
indicatif = { version = "0.17.3", features = ["rayon"] }
filetime = "0.2.22"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
camino = { version = "1.1.6", features = ["serde1"] }
